exports[`test will have a error action 1`] = `
Object {
  "meta": Object {
    "id": "resourceId",
    "isSelected": true,
    "reduxResourcesActionType": "RETRIEVE_RESOURCE_REQUEST_ERROR",
    "resource": "mockResources",
    "timestamp": "2016-01-01T05:00:00.000Z",
  },
  "payload": Array [
    "This is an initial error",
    "This is another error",
  ],
  "type": "GET_MOCK_RESOURCES_REQUEST_ERROR",
}
`;

exports[`test will have a success action 1`] = `
Object {
  "meta": Object {
    "id": "resourceId",
    "isSelected": true,
    "normalizedResponse": Object {
      "entities": Object {
        "mockResources": Object {
          "resourceId": Object {
            "id": "resourceId",
            "prop1": "initial prop1",
            "prop2": "initial prop2",
            "relatedResource": "relatedResourceId",
          },
        },
        "relatedMockResources": Object {
          "relatedResourceId": Object {
            "id": "relatedResourceId",
            "relatedProp1": "initial relatedProp1",
          },
        },
      },
      "result": Array [
        "resourceId",
      ],
    },
    "reduxResourcesActionType": "RETRIEVE_RESOURCE_REQUEST_SUCCESS",
    "resource": "mockResources",
    "timestamp": "2016-01-01T05:00:00.000Z",
  },
  "payload": Object {
    "id": "resourceId",
    "prop1": "initial prop1",
    "prop2": "initial prop2",
    "relatedResource": Object {
      "id": "relatedResourceId",
      "relatedProp1": "initial relatedProp1",
    },
  },
  "type": "GET_MOCK_RESOURCES_REQUEST_SUCCESS",
}
`;

exports[`test will have a update selectedResource action 1`] = `
Object {
  "meta": Object {
    "id": "resourceId",
    "isSelected": true,
    "reduxResourcesActionType": "SELECT_RESOURCE",
    "resource": "mockResources",
    "timestamp": "2016-01-01T05:00:00.000Z",
  },
  "type": "SELECT_MOCK_RESOURCES",
}
`;

exports[`test will have an initial action 1`] = `
Object {
  "meta": Object {
    "id": "resourceId",
    "isSelected": true,
    "reduxResourcesActionType": "RETRIEVE_RESOURCE_REQUEST",
    "resource": "mockResources",
    "timestamp": "2016-01-01T05:00:00.000Z",
  },
  "payload": "resourceId",
  "type": "GET_MOCK_RESOURCES_REQUEST",
}
`;
